common-applications/test-environment/openeuler-ci-tools/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openeuler-ci-tools
  name: openeuler-ci-tools
