common-applications/test-environment/openeuler-ci-tools/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: citoolservice
  namespace: openeuler-ci-tools
spec:
  ports:
    - name: httpport
      port: 80
      targetPort: 80
  selector:
    app: citoolwebsite
  type: ClusterIP
